# autoMac_gamer

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: tetris_autorun.toml  tetris_baseline.toml
src/automac_gamer/: __init__.py  cli.py  config.py  trainer.py  watcher.py
src/automac_gamer/backends/pyboy/: __init__.py  session.py
src/automac_gamer/core/: __init__.py  interfaces.py
src/automac_gamer/games/: __init__.py
src/automac_gamer/games/tetris/: __init__.py  adapter.py
src/automac_gamer/rl/: __init__.py  dqn.py
tests/: test_config.py  test_dqn.py  test_tetris_integration.py
