[project]
name = "automac-gamer"
version = "0.1.0"
description = "Autoresearch-inspired local game training framework with a PyBoy-first backend."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Reeve Francis" },
]
dependencies = [
  "numpy>=2.2.6",
  "pyboy>=2.7.0",
  "torch>=2.9.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
automac-gamer = "automac_gamer.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
